[package]
name = "pyth-min-ref"
version = "0.1.0"
description = "Reference implementation of pyth-min crate"
edition = "2021"
readme = "../README.md"
authors = ["PsyOptions <contact@psyoptions.io>"]
license = "AGPL-3.0-or-later"
keywords = ["solana", "anchor", "pyth"]

[lib]
crate-type = ["cdylib", "lib"]
name = "pyth_min_ref"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
pyth-min = "0.1.1"
